--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
 body {
-    background: slategray;
+    background: rgb(27,95,121);
+    background: linear-gradient(90deg, rgba(27,95,121,1) 0%, rgba(48,255,251,1) 50%, rgba(24,60,103,1) 100%);
+}
+
+h1, h2 {
+    color:rgba(0, 0, 200, 0);
 }
