--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
 body {
-    background: rgb(27,95,121);
-    background: linear-gradient(90deg, rgba(27,95,121,1) 0%, rgba(48,255,251,1) 50%, rgba(24,60,103,1) 100%);
+   background: 
+   url("./images/grey-paper.jpeg") 
+   top center / 100% 100% 
+   no-repeat                
+   fixed  ;               
+      
 }
 
 h1, h2 {
-    color:rgba(0, 0, 200, 0);
+    color:#fff; opacity: 0; font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
 }
+
